Revert "Update Locale constructor calls to use Locale.of"
This reverts commit bc5c6eb2377969924e0bd7df4424e7288a875342.